--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 AZURE_OPENAI_API_KEY=""
-AZURE_OPENAI_ENDPOINT=https://bantoalai.openai.azure.com/
+AZURE_OPENAI_ENDPOINT=https://<endpoint>.openai.azure.com/
 OPENAI_API_VERSION="2023-12-01-preview"
